; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_output.c_output_get_in_direction.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_output.c_output_get_in_direction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.sway_output = type { i32 }
%struct.wlr_box = type { i32, i32, i32, i32 }
%struct.wlr_output = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"got invalid direction: %d\00", align 1
@root = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sway_output* @output_get_in_direction(%struct.sway_output* %0, i32 %1) #0 {
  %3 = alloca %struct.sway_output*, align 8
  %4 = alloca %struct.sway_output*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.wlr_box*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.wlr_output*, align 8
  store %struct.sway_output* %0, %struct.sway_output** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @sway_assert(i32 %10, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  store %struct.sway_output* null, %struct.sway_output** %3, align 8
  br label %55

15:                                               ; preds = %2
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @root, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.sway_output*, %struct.sway_output** %4, align 8
  %20 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call %struct.wlr_box* @wlr_output_layout_get_box(i32 %18, i32 %21)
  store %struct.wlr_box* %22, %struct.wlr_box** %6, align 8
  %23 = load %struct.wlr_box*, %struct.wlr_box** %6, align 8
  %24 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.wlr_box*, %struct.wlr_box** %6, align 8
  %27 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = sdiv i32 %28, 2
  %30 = add nsw i32 %25, %29
  store i32 %30, i32* %7, align 4
  %31 = load %struct.wlr_box*, %struct.wlr_box** %6, align 8
  %32 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %31, i32 0, i32 2
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.wlr_box*, %struct.wlr_box** %6, align 8
  %35 = getelementptr inbounds %struct.wlr_box, %struct.wlr_box* %34, i32 0, i32 3
  %36 = load i32, i32* %35, align 4
  %37 = sdiv i32 %36, 2
  %38 = add nsw i32 %33, %37
  store i32 %38, i32* %8, align 4
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** @root, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* %5, align 4
  %43 = load %struct.sway_output*, %struct.sway_output** %4, align 8
  %44 = getelementptr inbounds %struct.sway_output, %struct.sway_output* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* %8, align 4
  %48 = call %struct.wlr_output* @wlr_output_layout_adjacent_output(i32 %41, i32 %42, i32 %45, i32 %46, i32 %47)
  store %struct.wlr_output* %48, %struct.wlr_output** %9, align 8
  %49 = load %struct.wlr_output*, %struct.wlr_output** %9, align 8
  %50 = icmp ne %struct.wlr_output* %49, null
  br i1 %50, label %52, label %51

51:                                               ; preds = %15
  store %struct.sway_output* null, %struct.sway_output** %3, align 8
  br label %55

52:                                               ; preds = %15
  %53 = load %struct.wlr_output*, %struct.wlr_output** %9, align 8
  %54 = call %struct.sway_output* @output_from_wlr_output(%struct.wlr_output* %53)
  store %struct.sway_output* %54, %struct.sway_output** %3, align 8
  br label %55

55:                                               ; preds = %52, %51, %14
  %56 = load %struct.sway_output*, %struct.sway_output** %3, align 8
  ret %struct.sway_output* %56
}

declare dso_local i32 @sway_assert(i32, i8*, i32) #1

declare dso_local %struct.wlr_box* @wlr_output_layout_get_box(i32, i32) #1

declare dso_local %struct.wlr_output* @wlr_output_layout_adjacent_output(i32, i32, i32, i32, i32) #1

declare dso_local %struct.sway_output* @output_from_wlr_output(%struct.wlr_output*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
